--- a/reviews.html
+++ b/reviews.html
@@ -29,7 +29,7 @@
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="learning">
-            <span class="btn-text">Обучение, тренинги, интенсивы</span>
+            <span class="btn-text">ОБУЧЕНИЕ, тренинги, интенсивы, семинары</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="joint-actions">
@@ -58,6 +58,10 @@
         </button>
         <button class="nav-btn" data-section="contacts">
             <span class="btn-text">Контакты, сотрудничество</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="exclusive">
+            <span class="btn-text">Эксклюзивные материалы</span>
             <span class="btn-glow"></span>
         </button>
     </div>
