--- a/contacts.html
+++ b/contacts.html
@@ -46,7 +46,6 @@
             height: 64px;
             margin: 0 auto 1rem auto;
             display: block;
-            filter: brightness(0) invert(1) sepia(1) saturate(5) hue-rotate(160deg);
             opacity: 0.8;
             transition: all 0.3s ease;
         }
@@ -54,6 +53,7 @@
         .contact-card:hover .contact-icon {
             opacity: 1;
             transform: scale(1.1);
+            filter: drop-shadow(0 0 8px rgba(64, 224, 208, 0.6));
         }
         
         .contact-platform {
