--- a/reviews.html
+++ b/reviews.html
@@ -62,7 +62,7 @@
             display: block;
             color: #40E0D0;
             text-shadow: 0 0 20px rgba(64, 224, 208, 0.5);
-            animation: float 3s ease-in-out infinite;
+            animation: iconfloat 3s ease-in-out infinite;
         }
 
         @keyframes iconfloat {
