--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             <span class="btn-text">Главная</span>
             <span class="btn-glow"></span>
         </button>
-        
+        <button class="nav-btn active" data-section="credits">
+            <span class="btn-text">КАК ВАШИХ КРЕДИТОРОВ ПРЕВРАТИТЬ В ВАШИХ ДОЛЖНИКОВ</span>
+            <span class="btn-glow"></span>
+        </button>
         <button class="nav-btn" data-section="new-worldview">
             <span class="btn-text">НОВОЕ ОБЪЯСНЕНИЕ МИРА (мировоззренческая теория)</span>
             <span class="btn-glow"></span>
